# journeyview

./: Cargo.toml  README.md  Trunk.toml  index.html  run-trunk.sh
.github/workflows/: deploy-pages.yml  static.yml
src/: app.rs  journey.rs  main.rs
testdata/: example1.gpx  example2.gpx  example3.gpx
