[package]
name = "gpxviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
egui = "0.34.1"
egui_plot = "0.35.0"
flexpolyline = "1.0.0"
geo-types = "0.7.19"
gpx = "0.10.0"
postcard = { version= "1.1.3", features = ["alloc"] }
serde = "1.0.228"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = "0.34.1"
arboard = "3.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "Storage",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
